[package]
name = "trgt"
version = "2.0.0"
edition = "2021"
build = "build.rs"

[workspace]
members = ["crates/pipeplot"]

[build-dependencies]
vergen = { version = "8.2", features = ["git", "gitcl"] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust-htslib = { version = "0.46", default-features = false }
itertools = "0.12"
bio = "1.6"
env_logger = "0.10"
log = "0.4"
chrono = "0.4"
arrayvec = "0.7"
kodama = "0.3"
rand = "0.8"
once_cell = "1.18"
flate2 = "1.0"
rayon = "1.10"
crossbeam-channel = "0.5"
pipeplot = { path = "crates/pipeplot" }
semver = "1.0"
tempfile = "3"
wfa2-sys = { version = "0.1.0", git = "https://github.com/ctsa/rust-wfa2.git", rev = "4342b3b06278656fa51c0a33b4eb0b67d53bfa8c" }
