[package]
name = "trgt"
version = "0.9.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitcl"] }

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rust-htslib = { version = "*", default-features = false }
itertools = "0.10.3"
threadpool = "*"
bio = "*"
env_logger = "0.10.0"
log = "0.4"
chrono = "*"
faccess = "0.2"
approx = "0.3"
arrayvec = "0.7"
statrs = "0.16.0"
kodama = "0.3"
rand = "*"
lazy_static = "*"
flate2 = "*"
