[package]
name = "trvz"
version = "0.5.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitcl"] }

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rust-htslib = { version = "*", default-features = false }
bio = "*"
rand = "0.8.5"
itertools = "*"
resvg = "0.22.0"
usvg = "0.22.0"
tiny-skia = "0.6.3"
env_logger = "0.10.0"
log = "*"
chrono = "*"
svg2pdf = "0.4"
tempfile = "3.3"
lazy_static = "*"
flate2 = "*"
